It lives.. WorldBuilder working. AddinInstaller working. Sources and targets now have separate base and game roots as Mac game root is in a subdirectory. Detect and warn if demo. Various Mac fixes. Lots of NON-NLS markers to reduce noise.