@@ -1,3 +1,8 @@
+/*
+ * Copyright (c) 2008, 2009, 2010, 2011 David C A Croft. All rights reserved. Your use of this computer software
+ * is permitted only in accordance with the GooTool license agreement distributed with this file.
+ */
+
 package net.infotrek.util;
 
 import java.net.URLEncoder;
@@ -12,6 +17,8 @@ import java.io.UnsupportedEncodingException;
  */
 public class EncodingUtil
 {
+  private static final String UTF_8 = "UTF-8";
+
   private EncodingUtil()
   {
   }
@@ -26,7 +33,7 @@ public class EncodingUtil
   public static String urlEncode(String s)
   {
     try {
-      return URLEncoder.encode(s, "UTF-8");
+      return URLEncoder.encode(s, UTF_8);
     }
     catch (UnsupportedEncodingException e) {
       throw new RuntimeException("UTF-8 not supported", e);
@@ -44,7 +51,7 @@ public class EncodingUtil
   public static byte[] getBytes(String s)
   {
     try {
-      return s.getBytes("UTF-8");
+      return s.getBytes(UTF_8);
     }
     catch (UnsupportedEncodingException e) {
       throw new RuntimeException("UTF-8 not supported", e);
@@ -73,7 +80,7 @@ public class EncodingUtil
   public static byte[] stringToBytesUtf8(String s)
   {
     try {
-      return s.getBytes("UTF-8");
+      return s.getBytes(UTF_8);
     }
     catch (UnsupportedEncodingException e) {
       throw new RuntimeException("UTF-8 unsupported!");
@@ -83,7 +90,7 @@ public class EncodingUtil
   public static String bytesToStringUtf8(byte[] b)
   {
     try {
-      return new String(b, "UTF-8");
+      return new String(b, UTF_8);
     }
     catch (UnsupportedEncodingException e) {
       throw new RuntimeException("UTF-8 unsupported!");
